--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ PORT=3004
 
 
 NATS_SERVERS="nats://localhost:4222"
+AUTH_DATABASE_URL=mongodb+srv://<user>:<password>@auth-microservice-db2.cwc5dso.mongodb.net/AuthDB
